--- a/packages/my-app/project.json
+++ b/packages/my-app/project.json
@@ -9,7 +9,8 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/packages/my-app"
+        "outputPath": "dist/packages/my-app",
+        "generateLockfile": true
       },
       "configurations": {
         "development": {
