--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@nx/jest": "16.4.1",
     "@nx/js": "16.4.1",
     "@nx/linter": "16.4.1",
-    "@nx/next": "^16.4.1",
+    "@nx/next": "16.4.1",
     "@nx/react": "16.4.1",
-    "@nx/workspace": "16.4.0",
+    "@nx/workspace": "16.4.1",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
@@ -31,7 +31,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "16.4.0",
+    "nx": "16.4.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
