--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@nx/cypress": "16.4.1",
-    "@nx/eslint-plugin": "16.4.1",
-    "@nx/jest": "16.4.1",
-    "@nx/js": "16.4.1",
-    "@nx/linter": "16.4.1",
-    "@nx/next": "16.4.1",
-    "@nx/react": "16.4.1",
-    "@nx/workspace": "16.4.1",
+    "@nx/cypress": "16.7.2",
+    "@nx/eslint-plugin": "16.7.2",
+    "@nx/jest": "16.7.2",
+    "@nx/js": "16.7.2",
+    "@nx/linter": "16.7.2",
+    "@nx/next": "16.7.2",
+    "@nx/react": "16.7.2",
+    "@nx/workspace": "16.7.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
-    "@types/react": "18.2.13",
+    "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "babel-jest": "^29.4.1",
     "cypress": "^12.11.0",
-    "eslint": "~8.15.0",
+    "eslint": "8.46.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-cypress": "2.14.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "16.4.1",
+    "nx": "16.7.2",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
